@@ -634,6 +634,7 @@ public:
 	// Hit-point algorithm:
 	bool can_act();
 	bool can_act_charmed(); // checks for charmed and charmed_more_difficult
+	void set_charmed_combat();
 	virtual void fall_down();
 	virtual void lay_down(bool die);
 	virtual void die(Game_object *attacker);        // We're dead.
